--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "pumpdotfun-sdk",
   "version": "1.3.2",
   "description": "A simple SDK for interacting with pumpdotfun",
-  
   "module": "./dist/esm/index.js",
   "main": "./dist/cjs/index.js",
   "browser": "./dist/browser/index.js",
@@ -47,6 +46,9 @@
     "@coral-xyz/anchor": "^0.30.1",
     "@rollup/plugin-json": "^6.1.0",
     "@solana/spl-token": "0.4.6",
-    "@solana/web3.js": "^1.92.1"
+    "@solana/web3.js": "^1.95.0",
+    "kafkajs": "^2.2.4",
+    "pumpdotfun-sdk": "^1.3.2",
+    "winston": "^3.17.0"
   }
 }
